# wlspeaker

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  README.rst  mypy.ini  pyproject.toml
.github/workflows/: pre-commit.yml  release.yml
wlspeaker/: __init__.py  client.py  resolver.py  server.py
